--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -121,6 +121,10 @@
     color: rgba(255, 255, 255, 0.8);
 }
 
+input[name="number_of_people"] {
+    width: calc(30% - 40px);
+}
+
 /* ボタンのスタイル */
 .edit-btn,
 .update-btn,
@@ -229,6 +233,48 @@
     padding: 10px;
 }
 
+.qr-code-btn {
+    background-color: #315eff;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    position: relative;
+    text-align: center;
+}
+
+.close {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+#qrCodeImage {
+    max-width: 200px;
+    height: auto;
+}
+
 /* レスポンシブ対応 */
 @media (max-width: 768px) {
     .container {
@@ -278,31 +324,5 @@
     .cancel-btn {
         font-size: 12px;
         padding: 6px 12px;
-    }
-}
-
-@media (max-width: 480px) {
-    .container {
-        padding: 5px;
-    }
-
-    .user-name {
-        font-size: 20px;
-    }
-
-    .favorite-grid {
-        grid-template-columns: 1fr;
-    }
-
-    .reservation-card,
-    .favorite-card {
-        margin-bottom: 15px;
-    }
-
-    .reservation-info-table th,
-    .reservation-info-table td,
-    .reservation-edit-table th,
-    .reservation-edit-table td {
-        padding: 5px;
     }
 }
