--- a/src/public/css/shop_detail.css
+++ b/src/public/css/shop_detail.css
@@ -67,7 +67,7 @@ h3 {
 input[type="date"],
 input[type="time"],
 select[name="number_of_people"] {
-    width: calc(100% - 40px);
+    width: calc(80% - 40px);
 }
 
 .text-danger {
@@ -77,7 +77,7 @@ select[name="number_of_people"] {
 }
 
 .summary {
-    width: calc(100% - 40px);
+    width: calc(90% - 40px);
     background-color: #4d7fff;
     border-radius: 4px;
     color: #ffffff;
@@ -124,38 +124,53 @@ select[name="number_of_people"] {
     background-color: #0729a3;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .main {
         flex-direction: column;
+        padding: 0 10px;
     }
-    
+
+    h2 {
+        font-size: 24px;
+    }
+
+    h3 {
+        margin-left: 10px;
+        font-size: 18px;
+    }
+
     .left,
     .right {
         width: 100%;
     }
 
     .right {
-        margin-top: 20px;
+        margin: 20px 0;
     }
 
-    h2 {
-        font-size: 24px;
-    }
-}
-
-@media (max-width: 480px) {
-
-    .input,
-    .summary {
+    .input {
         width: calc(100% - 20px);
         margin-left: 10px;
     }
 
-    h2 {
-        font-size: 20px;
+    input[type="date"],
+    input[type="time"],
+    select[name="number_of_people"] {
+        width: calc(100% - 20px);
     }
 
-    .summary-table td {
+    .text-danger {
+        margin-left: 10px;
+    }
+
+    .summary {
+        width: calc(100% - 20px);
+        margin-left: 10px;
+        padding: 10px;
+    }
+
+    .submit-btn {
         font-size: 14px;
+        padding: 12px;
     }
 }
