--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -275,6 +275,27 @@ input[name="number_of_people"] {
     height: auto;
 }
 
+.alert-success {
+    width: 20%;
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+    border-radius: 5px;
+    padding: 10px 15px;
+    margin: 10px 0;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+
+.alert-success::before {
+    content: '\2714';
+    /* チェックマーク */
+    font-size: 18px;
+    margin-right: 10px;
+}
+
 /* レスポンシブ対応 */
 @media (max-width: 768px) {
     .container {
